# tfg-javito

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py  train.py
