[project]
name = "tfg-javito"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "loguru>=0.7.3",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "setfit>=1.1.2",
    "transformers>=4.51.3",
    "wandb>=0.19.9",
]
